# GuardRailAI

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  pyproject.toml  setup.py  test_invalid.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
GuardRailAI/: cli.py
assets/: eu_ai_prompts.yaml  policy.yaml  thresholds.yaml
guardrail_ai/: __init__.py  __main__.py  adapters.py  cli.py  core.py  moderation.py
outputs/: fixed_report.html  report.json  test_report.html
templates/: report.html
