[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guardrail-ai"
version = "0.1.0"
description = "Open-source Python CLI + CI tool that evaluates large language model (LLM) endpoints for jailbreak susceptibility and EU AI Act compliance"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.9.0",
    "requests>=2.25.0",
    "pyyaml>=6.0",
    "jinja2>=3.0.0",
]

[project.scripts]
guardrail-ai = "guardrail_ai.cli:app"

[project.urls]
Homepage = "https://github.com/yourusername/GuardrailAI"
Repository = "https://github.com/yourusername/GuardrailAI"